fixed spacing in navigation for responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ h2 {
   font-weight: 300;
   color: black;
   text-decoration: none;
-  padding: 12px;
+  padding: 10px;
 }
 
 .toolbar_navigation_items .item:hover {
